--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <table cellspacing="20">
             <tr>
                 <td>
-                    <img src="images/feel cry.jpg" alt="some image bruh idk">
+                    <img src="Images/feel cry.jpg" alt="some image bruh idk">
                 </td>
                 <td>
                     <h1>Andrew Johnston</h1>
